Keep meter filtering compatible with Android 26